request fixed, added overflow to about

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h3{
 }
 .about {
     height: 16rem;
+    overflow: auto;
 }
 
 .filterSearch {
@@ -65,6 +66,7 @@ h3{
     padding-left: 20px;
     padding-right: 20px;
     font-size: 18px;
+    
 }
 
 .row4, .row5 {
@@ -89,11 +91,12 @@ ul {
     overflow: auto;
 }
 
-.row5{
+.row6{
     background:rgba(66, 107, 105, 0.5);
     height: 30rem;
     margin-bottom: 5%;
 }
+
 .barGraph{
     height: 82%;
 }
